- This is a take on transaction data - still a little buggy I think, but lets see!

--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -94,6 +94,10 @@ background: url('../images/tick.png') no-repeat;
 padding:0 0 20px 20px;
 }
 
+.transactions-wrap {
+padding-bottom: 15px;
+}
+
 #footer {
 clear:both;
 border-top: 2px solid #eee;
