--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -85,13 +85,24 @@ width:980px;
 p.fail {
 margin:10px 0;
 }
-p.table-title {
-margin-top:10px;
-}
+
 
 p.tick {
 background: url('../images/tick.png') no-repeat;
 padding:0 0 20px 20px;
+}
+p.check {
+background: url('../images/question.png') no-repeat;
+padding:0 0 20px 20px;
+}
+p.cross {
+background: url('../images/cross.png') no-repeat;
+padding:0 0 20px 20px;
+}
+
+p.table-title {
+margin-top:10px;
+padding-bottom:0;
 }
 
 .transactions-wrap {
