--- a/where_is/css/style.css
+++ b/where_is/css/style.css
@@ -76,11 +76,9 @@ text-align:left;
 color: #444;
 }
 
-
 ul.files {
   padding-left: 260px;
 }
-
 
 .sidebar {
 float:left;
@@ -89,16 +87,14 @@ padding-right:10px;
 font-size:0.9em;
 }
 
-
-
-
-
 #sidebar h3 {
 margin:0 0 0 10px;
 text-transform:none;
 }
 
-.footer {
-    margin-top: 5em; text-align: left;
+#footer {
+    padding-top: 5em; 
+    text-align: left;
+    clear:both;
 }
  
